documentation/2.1.1/atts.md
---
layout: oldGuidelines
---
<article class="page type-page status-publish hentry">
   <div class="entry-content">
      <div class="panel-grid">
         <div class="panel-grid-cell" style="width: 65%; float: left;">
            <div class="panel widget widget_text panel-first-child panel-last-child">
               <h3 class="widget-title">Attribute Classes</h3>
               <div class="textwidget">
                  <div class="sortedInitials well a">
                     <h3>a</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.accid.anl">att.accid.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.accid.ges">att.accid.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.accid.log">att.accid.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.accid.vis">att.accid.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.accid.vis.mensural">att.accid.vis.mensural</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.accidental">att.accidental</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.accidental.performed">att.accidental.performed</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.agentident">att.agentident</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.alignment">att.alignment</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.altsym">att.altsym</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.annot.anl">att.annot.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.annot.ges">att.annot.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.annot.log">att.annot.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.annot.vis">att.annot.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.arpeg.anl">att.arpeg.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.arpeg.ges">att.arpeg.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.arpeg.log">att.arpeg.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.arpeg.vis">att.arpeg.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.artic.anl">att.artic.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.artic.ges">att.artic.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.artic.log">att.artic.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.artic.vis">att.artic.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.articulation">att.articulation</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.articulation.performed">att.articulation.performed</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.augmentdots">att.augmentdots</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd a" href="/documentation/2.1.1/att.authorized">att.authorized</a></div>
                  <div class="sortedInitials well b">
                     <h3>b</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.barLine.anl">att.barLine.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.barLine.ges">att.barLine.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.barLine.log">att.barLine.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.barLine.vis">att.barLine.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.barplacement">att.barplacement</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beam.anl">att.beam.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beam.ges">att.beam.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beam.log">att.beam.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beam.vis">att.beam.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beamed">att.beamed</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beamedwith">att.beamedwith</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beaming.log">att.beaming.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beaming.vis">att.beaming.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beamrend">att.beamrend</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beamsecondary">att.beamsecondary</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beamSpan.anl">att.beamSpan.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beamSpan.ges">att.beamSpan.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beamSpan.log">att.beamSpan.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beamSpan.vis">att.beamSpan.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beatRpt.anl">att.beatRpt.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beatRpt.ges">att.beatRpt.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beatRpt.log">att.beatRpt.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.beatRpt.vis">att.beatRpt.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.bend.anl">att.bend.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.bend.ges">att.bend.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.bend.log">att.bend.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.bend.vis">att.bend.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.bibl">att.bibl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.breath.anl">att.breath.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.breath.ges">att.breath.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.breath.log">att.breath.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.breath.vis">att.breath.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.bTrem.anl">att.bTrem.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.bTrem.ges">att.bTrem.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.bTrem.log">att.bTrem.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd b" href="/documentation/2.1.1/att.bTrem.vis">att.bTrem.vis</a></div>
                  <div class="sortedInitials well c">
                     <h3>c</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.calendared">att.calendared</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.canonical">att.canonical</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.channelized">att.channelized</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.chord.anl">att.chord.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.chord.ges">att.chord.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.chord.ges.cmn">att.chord.ges.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.chord.log">att.chord.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.chord.log.cmn">att.chord.log.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.chord.vis">att.chord.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.chord.vis.cmn">att.chord.vis.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.clef.anl">att.clef.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.clef.ges">att.clef.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.clef.log">att.clef.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.clef.vis">att.clef.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.cleffing.log">att.cleffing.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.cleffing.vis">att.cleffing.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.clefGrp.anl">att.clefGrp.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.clefGrp.ges">att.clefGrp.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.clefGrp.log">att.clefGrp.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.clefGrp.vis">att.clefGrp.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.clefshape">att.clefshape</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.coded">att.coded</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.color">att.color</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.coloration">att.coloration</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.common">att.common</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.common.anl">att.common.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.controlevent">att.controlevent</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.coordinated">att.coordinated</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.crit">att.crit</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.curvature">att.curvature</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.curverend">att.curverend</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.custos.anl">att.custos.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.custos.ges">att.custos.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.custos.log">att.custos.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.custos.vis">att.custos.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd c" href="/documentation/2.1.1/att.cutout">att.cutout</a></div>
                  <div class="sortedInitials well d">
                     <h3>d</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.datable">att.datable</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.datapointing">att.datapointing</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.declaring">att.declaring</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dir.anl">att.dir.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dir.ges">att.dir.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dir.log">att.dir.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dir.vis">att.dir.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.distances">att.distances</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dot.anl">att.dot.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dot.ges">att.dot.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dot.log">att.dot.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dot.vis">att.dot.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dot.vis.mensural">att.dot.vis.mensural</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.duration.additive">att.duration.additive</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.duration.default">att.duration.default</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.duration.musical">att.duration.musical</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.duration.performed">att.duration.performed</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.duration.ratio">att.duration.ratio</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dynam.anl">att.dynam.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dynam.ges">att.dynam.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dynam.log">att.dynam.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd d" href="/documentation/2.1.1/att.dynam.vis">att.dynam.vis</a></div>
                  <div class="sortedInitials well e">
                     <h3>e</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd e" href="/documentation/2.1.1/att.edit">att.edit</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd e" href="/documentation/2.1.1/att.enclosingchars">att.enclosingchars</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd e" href="/documentation/2.1.1/att.ending.anl">att.ending.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd e" href="/documentation/2.1.1/att.ending.ges">att.ending.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd e" href="/documentation/2.1.1/att.ending.log">att.ending.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd e" href="/documentation/2.1.1/att.ending.vis">att.ending.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd e" href="/documentation/2.1.1/att.event">att.event</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd e" href="/documentation/2.1.1/att.expandable">att.expandable</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd e" href="/documentation/2.1.1/att.extent">att.extent</a></div>
                  <div class="sortedInitials well f">
                     <h3>f</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.facsimile">att.facsimile</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fermata.anl">att.fermata.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fermata.ges">att.fermata.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fermata.log">att.fermata.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fermata.vis">att.fermata.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fermatapresent">att.fermatapresent</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fretlocation">att.fretlocation</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fTrem.anl">att.fTrem.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fTrem.ges">att.fTrem.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fTrem.log">att.fTrem.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd f" href="/documentation/2.1.1/att.fTrem.vis">att.fTrem.vis</a></div>
                  <div class="sortedInitials well g">
                     <h3>g</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd g" href="/documentation/2.1.1/att.gliss.anl">att.gliss.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd g" href="/documentation/2.1.1/att.gliss.ges">att.gliss.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd g" href="/documentation/2.1.1/att.gliss.log">att.gliss.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd g" href="/documentation/2.1.1/att.gliss.vis">att.gliss.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd g" href="/documentation/2.1.1/att.graced">att.graced</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd g" href="/documentation/2.1.1/att.grpSym.anl">att.grpSym.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd g" href="/documentation/2.1.1/att.grpSym.ges">att.grpSym.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd g" href="/documentation/2.1.1/att.grpSym.log">att.grpSym.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd g" href="/documentation/2.1.1/att.grpSym.vis">att.grpSym.vis</a></div>
                  <div class="sortedInitials well h">
                     <h3>h</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.hairpin.anl">att.hairpin.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.hairpin.ges">att.hairpin.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.hairpin.log">att.hairpin.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.hairpin.vis">att.hairpin.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.halfmRpt.anl">att.halfmRpt.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.halfmRpt.ges">att.halfmRpt.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.halfmRpt.log">att.halfmRpt.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.halfmRpt.vis">att.halfmRpt.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.handident">att.handident</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.harm.anl">att.harm.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.harm.ges">att.harm.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.harm.log">att.harm.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.harm.vis">att.harm.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.harmonicfunction">att.harmonicfunction</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.harpPedal.anl">att.harpPedal.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.harpPedal.ges">att.harpPedal.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.harpPedal.log">att.harpPedal.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.harpPedal.vis">att.harpPedal.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd h" href="/documentation/2.1.1/att.horizontalalign">att.horizontalalign</a></div>
                  <div class="sortedInitials well i">
                     <h3>i</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd i" href="/documentation/2.1.1/att.id">att.id</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd i" href="/documentation/2.1.1/att.ineume.anl">att.ineume.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd i" href="/documentation/2.1.1/att.ineume.ges">att.ineume.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd i" href="/documentation/2.1.1/att.ineume.log">att.ineume.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd i" href="/documentation/2.1.1/att.ineume.vis">att.ineume.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd i" href="/documentation/2.1.1/att.instrumentident">att.instrumentident</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd i" href="/documentation/2.1.1/att.internetmedia">att.internetmedia</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd i" href="/documentation/2.1.1/att.intervalharmonic">att.intervalharmonic</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd i" href="/documentation/2.1.1/att.intervallicdesc">att.intervallicdesc</a></div>
                  <div class="sortedInitials well j">
                     <h3>j</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd j" href="/documentation/2.1.1/att.joined">att.joined</a></div>
                  <div class="sortedInitials well k">
                     <h3>k</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keyAccid.anl">att.keyAccid.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keyAccid.ges">att.keyAccid.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keyAccid.log">att.keyAccid.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keyAccid.vis">att.keyAccid.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keySig.anl">att.keySig.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keySig.ges">att.keySig.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keySig.log">att.keySig.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keySig.vis">att.keySig.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keySigDefault.log">att.keySigDefault.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd k" href="/documentation/2.1.1/att.keySigDefault.vis">att.keySigDefault.vis</a></div>
                  <div class="sortedInitials well l">
                     <h3>l</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.labels.addl">att.labels.addl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.lang">att.lang</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layer.anl">att.layer.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layer.ges">att.layer.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layer.log">att.layer.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layer.vis">att.layer.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layerDef.anl">att.layerDef.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layerDef.ges">att.layerDef.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layerDef.log">att.layerDef.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layerDef.log.cmn">att.layerDef.log.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layerDef.vis">att.layerDef.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.layerident">att.layerident</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.ligature.anl">att.ligature.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.ligature.ges">att.ligature.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.ligature.log">att.ligature.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.ligature.vis">att.ligature.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.lineloc">att.lineloc</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.linerend">att.linerend</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.lvpresent">att.lvpresent</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.lyrics.anl">att.lyrics.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.lyrics.ges">att.lyrics.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.lyrics.log">att.lyrics.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.lyrics.vis">att.lyrics.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd l" href="/documentation/2.1.1/att.lyricstyle">att.lyricstyle</a></div>
                  <div class="sortedInitials well m">
                     <h3>m</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.measure.anl">att.measure.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.measure.ges">att.measure.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.measure.log">att.measure.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.measure.vis">att.measure.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.measurement">att.measurement</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mediabounds">att.mediabounds</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.medium">att.medium</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meiversion">att.meiversion</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.melodicfunction">att.melodicfunction</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mensur.anl">att.mensur.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mensur.ges">att.mensur.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mensur.log">att.mensur.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mensur.vis">att.mensur.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mensural.log">att.mensural.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mensural.shared">att.mensural.shared</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mensural.vis">att.mensural.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterconformance">att.meterconformance</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterconformance.bar">att.meterconformance.bar</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSig.anl">att.meterSig.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSig.ges">att.meterSig.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSig.log">att.meterSig.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSig.vis">att.meterSig.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSigDefault.log">att.meterSigDefault.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSigDefault.vis">att.meterSigDefault.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSigGrp.anl">att.meterSigGrp.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSigGrp.ges">att.meterSigGrp.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSigGrp.log">att.meterSigGrp.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.meterSigGrp.vis">att.meterSigGrp.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.midi.anl">att.midi.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.midi.event">att.midi.event</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.midi.ges">att.midi.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.midi.log">att.midi.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.midi.vis">att.midi.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.midiinstrument">att.midiinstrument</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.midinumber">att.midinumber</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.miditempo">att.miditempo</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.midivalue">att.midivalue</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mmtempo">att.mmtempo</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mordent.anl">att.mordent.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mordent.ges">att.mordent.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mordent.log">att.mordent.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mordent.vis">att.mordent.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRest.anl">att.mRest.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRest.ges">att.mRest.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRest.log">att.mRest.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRest.vis">att.mRest.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRpt.anl">att.mRpt.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRpt.ges">att.mRpt.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRpt.log">att.mRpt.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRpt.vis">att.mRpt.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRpt2.anl">att.mRpt2.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRpt2.ges">att.mRpt2.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRpt2.log">att.mRpt2.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mRpt2.vis">att.mRpt2.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mSpace.anl">att.mSpace.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mSpace.ges">att.mSpace.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mSpace.log">att.mSpace.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.mSpace.vis">att.mSpace.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.multinummeasures">att.multinummeasures</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.multiRest.anl">att.multiRest.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.multiRest.ges">att.multiRest.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.multiRest.log">att.multiRest.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.multiRest.vis">att.multiRest.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.multiRpt.anl">att.multiRpt.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.multiRpt.ges">att.multiRpt.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.multiRpt.log">att.multiRpt.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd m" href="/documentation/2.1.1/att.multiRpt.vis">att.multiRpt.vis</a></div>
                  <div class="sortedInitials well n">
                     <h3>n</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.name">att.name</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.anl">att.note.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.ges">att.note.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.ges.cmn">att.note.ges.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.ges.mensural">att.note.ges.mensural</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.ges.tablature">att.note.ges.tablature</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.log">att.note.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.log.cmn">att.note.log.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.log.mensural">att.note.log.mensural</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.vis">att.note.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.note.vis.cmn">att.note.vis.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.numbered">att.numbered</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd n" href="/documentation/2.1.1/att.numberplacement">att.numberplacement</a></div>
                  <div class="sortedInitials well o">
                     <h3>o</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.octave">att.octave</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.octave.anl">att.octave.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.octave.ges">att.octave.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.octave.log">att.octave.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.octave.vis">att.octave.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.octavedefault">att.octavedefault</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.octavedisplacement">att.octavedisplacement</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.onelinestaff">att.onelinestaff</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.ornam">att.ornam</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.ornamentaccid">att.ornamentaccid</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.ossia.anl">att.ossia.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.ossia.ges">att.ossia.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.ossia.log">att.ossia.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd o" href="/documentation/2.1.1/att.ossia.vis">att.ossia.vis</a></div>
                  <div class="sortedInitials well p">
                     <h3>p</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pad.anl">att.pad.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pad.ges">att.pad.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pad.log">att.pad.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pad.vis">att.pad.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.part.anl">att.part.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.part.ges">att.part.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.part.log">att.part.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.part.vis">att.part.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.parts.anl">att.parts.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.parts.ges">att.parts.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.parts.log">att.parts.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.parts.vis">att.parts.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pb.anl">att.pb.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pb.ges">att.pb.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pb.log">att.pb.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pb.vis">att.pb.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pedal.anl">att.pedal.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pedal.ges">att.pedal.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pedal.log">att.pedal.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pedal.vis">att.pedal.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.phrase.anl">att.phrase.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.phrase.ges">att.phrase.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.phrase.log">att.phrase.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.phrase.vis">att.phrase.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.phrase.vis.cmn">att.phrase.vis.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pianopedals">att.pianopedals</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pitch">att.pitch</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pitchclass">att.pitchclass</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pitched">att.pitched</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.placement">att.placement</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.plist">att.plist</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.pointing">att.pointing</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.proport.anl">att.proport.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.proport.ges">att.proport.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.proport.log">att.proport.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd p" href="/documentation/2.1.1/att.proport.vis">att.proport.vis</a></div>
                  <div class="sortedInitials well r">
                     <h3>r</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rdg.anl">att.rdg.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rdg.ges">att.rdg.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rdg.log">att.rdg.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rdg.vis">att.rdg.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.reasonident">att.reasonident</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.regularmethod">att.regularmethod</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.reh.anl">att.reh.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.reh.ges">att.reh.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.reh.log">att.reh.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.reh.vis">att.reh.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rehearsal">att.rehearsal</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rel">att.rel</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.relativesize">att.relativesize</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.responsibility">att.responsibility</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rest.anl">att.rest.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rest.ges">att.rest.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rest.ges.mensural">att.rest.ges.mensural</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rest.log">att.rest.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rest.log.cmn">att.rest.log.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rest.vis">att.rest.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rest.vis.cmn">att.rest.vis.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd r" href="/documentation/2.1.1/att.rest.vis.mensural">att.rest.vis.mensural</a></div>
                  <div class="sortedInitials well s">
                     <h3>s</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.sb.anl">att.sb.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.sb.ges">att.sb.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.sb.log">att.sb.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.sb.vis">att.sb.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.scalable">att.scalable</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.score.anl">att.score.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.score.ges">att.score.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.score.log">att.score.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.score.vis">att.score.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.scoreDef.anl">att.scoreDef.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.scoreDef.ges">att.scoreDef.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.scoreDef.log">att.scoreDef.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.scoreDef.log.cmn">att.scoreDef.log.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.scoreDef.log.mensural">att.scoreDef.log.mensural</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.scoreDef.vis">att.scoreDef.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.scoreDef.vis.cmn">att.scoreDef.vis.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.scoreDef.vis.mensural">att.scoreDef.vis.mensural</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.section.anl">att.section.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.section.ges">att.section.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.section.log">att.section.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.section.vis">att.section.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.sequence">att.sequence</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.slashcount">att.slashcount</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.slur.anl">att.slur.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.slur.ges">att.slur.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.slur.log">att.slur.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.slur.vis">att.slur.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.slurpresent">att.slurpresent</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.slurrend">att.slurrend</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.solfa">att.solfa</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.source">att.source</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.space.anl">att.space.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.space.ges">att.space.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.space.log">att.space.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.space.log.cmn">att.space.log.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.space.vis">att.space.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staff.anl">att.staff.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staff.ges">att.staff.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staff.log">att.staff.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staff.vis">att.staff.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffDef.anl">att.staffDef.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffDef.ges">att.staffDef.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffDef.ges.tablature">att.staffDef.ges.tablature</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffDef.log">att.staffDef.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffDef.log.cmn">att.staffDef.log.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffDef.log.mensural">att.staffDef.log.mensural</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffDef.vis">att.staffDef.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffDef.vis.cmn">att.staffDef.vis.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffDef.vis.mensural">att.staffDef.vis.mensural</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffgroupingsym">att.staffgroupingsym</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffGrp.anl">att.staffGrp.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffGrp.ges">att.staffGrp.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffGrp.log">att.staffGrp.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffGrp.vis">att.staffGrp.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffident">att.staffident</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffloc">att.staffloc</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.staffloc.pitched">att.staffloc.pitched</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.startendid">att.startendid</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.startid">att.startid</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.stemmed">att.stemmed</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.stemmed.cmn">att.stemmed.cmn</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.syl.anl">att.syl.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.syl.ges">att.syl.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.syl.log">att.syl.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.syl.vis">att.syl.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd s" href="/documentation/2.1.1/att.syltext">att.syltext</a></div>
                  <div class="sortedInitials well t">
                     <h3>t</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tabular">att.tabular</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tempo.anl">att.tempo.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tempo.ges">att.tempo.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tempo.log">att.tempo.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tempo.vis">att.tempo.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.textstyle">att.textstyle</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tie.anl">att.tie.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tie.ges">att.tie.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tie.log">att.tie.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tie.vis">att.tie.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tiepresent">att.tiepresent</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tierend">att.tierend</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.timebase">att.timebase</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.timestamp.musical">att.timestamp.musical</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.timestamp.performed">att.timestamp.performed</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.timestamp2.musical">att.timestamp2.musical</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.trans">att.trans</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.transposition">att.transposition</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tremmeasured">att.tremmeasured</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.trill.anl">att.trill.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.trill.ges">att.trill.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.trill.log">att.trill.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.trill.vis">att.trill.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tuplet.anl">att.tuplet.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tuplet.ges">att.tuplet.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tuplet.log">att.tuplet.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tuplet.vis">att.tuplet.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tupletpresent">att.tupletpresent</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tupletSpan.anl">att.tupletSpan.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tupletSpan.ges">att.tupletSpan.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tupletSpan.log">att.tupletSpan.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.tupletSpan.vis">att.tupletSpan.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.turn.anl">att.turn.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.turn.ges">att.turn.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.turn.log">att.turn.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.turn.vis">att.turn.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.typed">att.typed</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd t" href="/documentation/2.1.1/att.typography">att.typography</a></div>
                  <div class="sortedInitials well u">
                     <h3>u</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd u" href="/documentation/2.1.1/att.uneume.anl">att.uneume.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd u" href="/documentation/2.1.1/att.uneume.ges">att.uneume.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd u" href="/documentation/2.1.1/att.uneume.log">att.uneume.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd u" href="/documentation/2.1.1/att.uneume.vis">att.uneume.vis</a></div>
                  <div class="sortedInitials well v">
                     <h3>v</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.verse.anl">att.verse.anl</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.verse.ges">att.verse.ges</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.verse.log">att.verse.log</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.verse.vis">att.verse.vis</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.visibility">att.visibility</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.visualoffset">att.visualoffset</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.visualoffset.ho">att.visualoffset.ho</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.visualoffset.to">att.visualoffset.to</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.visualoffset.vo">att.visualoffset.vo</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.visualoffset2">att.visualoffset2</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.visualoffset2.ho">att.visualoffset2.ho</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.visualoffset2.to">att.visualoffset2.to</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd v" href="/documentation/2.1.1/att.visualoffset2.vo">att.visualoffset2.vo</a></div>
                  <div class="sortedInitials well w">
                     <h3>w</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd w" href="/documentation/2.1.1/att.whitespace">att.whitespace</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd w" href="/documentation/2.1.1/att.width">att.width</a></div>
                  <div class="sortedInitials well x">
                     <h3>x</h3><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd x" href="/documentation/2.1.1/att.xy">att.xy</a><a xmlns="http://www.w3.org/1999/xhtml" class="link_odd x" href="/documentation/2.1.1/att.xy2">att.xy2</a></div>
               </div>
            </div>
         </div>
         <div class="panel-grid-cell" style="width: 35%; float: left;">
            <div class="panel widget widget_text panel-first-child panel-last-child">
               <header class="entry-header">
                  <h1 class="entry-title">
                     MEI Guidelines 
                     <small>Version 2.1.1</small>
                  </h1>
               </header>
               <div class="textwidget">
                  <ul class="guidelinesList">
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/chapters">MEI Guidelines</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/elements">Elements</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/atts">Attributes</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/models">Model Classes</a>
                     </li>
                     <li>
                        <a class="guidelines_mainLink" href="/documentation/2.1.1/data">Data Types</a>
                     </li>
                  </ul>
               </div>
            </div>
         </div>
      </div>
   </div>
</article>