documentation/3.0.0/atts.md
---
layout: oldGuidelines
---
<div>
   <article class="page type-page status-publish hentry">
      <div class="entry-content">
         <div class="panel-grid">
            <div class="panel-grid-cell" style="width: 65%; float: left;">
               <div class="panel widget widget_text panel-first-child panel-last-child">
                  <h3 class="widget-title">MEI Attribute Classes</h3>
                  <div class="textwidget">
                     <div class="sortedInitials well a">
                        <h3>a</h3>
                        <a class="link_odd a" href="/documentation/3.0.0/att.accid.anl">att.accid.anl</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.accid.ges">att.accid.ges</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.accid.log">att.accid.log</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.accid.vis">att.accid.vis</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.accid.vis.mensural">att.accid.vis.mensural</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.accidental">att.accidental</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.accidental.performed">att.accidental.performed</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.agentident">att.agentident</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.alignment">att.alignment</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.altsym">att.altsym</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.annot.anl">att.annot.anl</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.annot.ges">att.annot.ges</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.annot.log">att.annot.log</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.annot.vis">att.annot.vis</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.arpeg.anl">att.arpeg.anl</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.arpeg.ges">att.arpeg.ges</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.arpeg.log">att.arpeg.log</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.arpeg.vis">att.arpeg.vis</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.artic.anl">att.artic.anl</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.artic.ges">att.artic.ges</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.artic.log">att.artic.log</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.artic.vis">att.artic.vis</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.articulation">att.articulation</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.articulation.performed">att.articulation.performed</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.augmentdots">att.augmentdots</a>
                        <a class="link_odd a" href="/documentation/3.0.0/att.authorized">att.authorized</a>
                     </div>
                     <div class="sortedInitials well b">
                        <h3>b</h3>
                        <a class="link_odd b" href="/documentation/3.0.0/att.bTrem.anl">att.bTrem.anl</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.bTrem.ges">att.bTrem.ges</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.bTrem.log">att.bTrem.log</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.bTrem.vis">att.bTrem.vis</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.barLine.anl">att.barLine.anl</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.barLine.ges">att.barLine.ges</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.barLine.log">att.barLine.log</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.barLine.vis">att.barLine.vis</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.barplacement">att.barplacement</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beam.anl">att.beam.anl</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beam.ges">att.beam.ges</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beam.log">att.beam.log</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beam.vis">att.beam.vis</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beamSpan.anl">att.beamSpan.anl</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beamSpan.ges">att.beamSpan.ges</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beamSpan.log">att.beamSpan.log</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beamSpan.vis">att.beamSpan.vis</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beamed">att.beamed</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beamedwith">att.beamedwith</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beaming.log">att.beaming.log</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beaming.vis">att.beaming.vis</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beamrend">att.beamrend</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beamsecondary">att.beamsecondary</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beatRpt.anl">att.beatRpt.anl</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beatRpt.ges">att.beatRpt.ges</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beatRpt.log">att.beatRpt.log</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.beatRpt.vis">att.beatRpt.vis</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.bend.anl">att.bend.anl</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.bend.ges">att.bend.ges</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.bend.log">att.bend.log</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.bend.vis">att.bend.vis</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.bibl">att.bibl</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.breath.anl">att.breath.anl</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.breath.ges">att.breath.ges</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.breath.log">att.breath.log</a>
                        <a class="link_odd b" href="/documentation/3.0.0/att.breath.vis">att.breath.vis</a>
                     </div>
                     <div class="sortedInitials well c">
                        <h3>c</h3>
                        <a class="link_odd c" href="/documentation/3.0.0/att.calendared">att.calendared</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.canonical">att.canonical</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.channelized">att.channelized</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.chord.anl">att.chord.anl</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.chord.ges">att.chord.ges</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.chord.ges.cmn">att.chord.ges.cmn</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.chord.log">att.chord.log</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.chord.log.cmn">att.chord.log.cmn</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.chord.vis">att.chord.vis</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.chord.vis.cmn">att.chord.vis.cmn</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.classcodeident">att.classcodeident</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.clef.anl">att.clef.anl</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.clef.ges">att.clef.ges</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.clef.log">att.clef.log</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.clef.vis">att.clef.vis</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.clefGrp.anl">att.clefGrp.anl</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.clefGrp.ges">att.clefGrp.ges</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.clefGrp.log">att.clefGrp.log</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.clefGrp.vis">att.clefGrp.vis</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.cleffing.log">att.cleffing.log</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.cleffing.vis">att.cleffing.vis</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.clefshape">att.clefshape</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.color">att.color</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.coloration">att.coloration</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.common">att.common</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.common.anl">att.common.anl</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.commonPart">att.commonPart</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.controlevent">att.controlevent</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.coordinated">att.coordinated</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.cpMark.anl">att.cpMark.anl</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.cpMark.ges">att.cpMark.ges</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.cpMark.log">att.cpMark.log</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.cpMark.vis">att.cpMark.vis</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.crit">att.crit</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.curvature">att.curvature</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.curverend">att.curverend</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.custos.anl">att.custos.anl</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.custos.ges">att.custos.ges</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.custos.log">att.custos.log</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.custos.vis">att.custos.vis</a>
                        <a class="link_odd c" href="/documentation/3.0.0/att.cutout">att.cutout</a>
                     </div>
                     <div class="sortedInitials well d">
                        <h3>d</h3>
                        <a class="link_odd d" href="/documentation/3.0.0/att.datable">att.datable</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.datapointing">att.datapointing</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.declaring">att.declaring</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dimensions">att.dimensions</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dir.anl">att.dir.anl</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dir.ges">att.dir.ges</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dir.log">att.dir.log</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dir.vis">att.dir.vis</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.distances">att.distances</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dot.anl">att.dot.anl</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dot.ges">att.dot.ges</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dot.log">att.dot.log</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dot.vis">att.dot.vis</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dot.vis.mensural">att.dot.vis.mensural</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.duration.additive">att.duration.additive</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.duration.default">att.duration.default</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.duration.musical">att.duration.musical</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.duration.performed">att.duration.performed</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.duration.ratio">att.duration.ratio</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dynam.anl">att.dynam.anl</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dynam.ges">att.dynam.ges</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dynam.log">att.dynam.log</a>
                        <a class="link_odd d" href="/documentation/3.0.0/att.dynam.vis">att.dynam.vis</a>
                     </div>
                     <div class="sortedInitials well e">
                        <h3>e</h3>
                        <a class="link_odd e" href="/documentation/3.0.0/att.edit">att.edit</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.enclosingchars">att.enclosingchars</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.ending.anl">att.ending.anl</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.ending.ges">att.ending.ges</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.ending.log">att.ending.log</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.ending.vis">att.ending.vis</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.endings">att.endings</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.event">att.event</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.evidence">att.evidence</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.expandable">att.expandable</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.extender">att.extender</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.extent">att.extent</a>
                        <a class="link_odd e" href="/documentation/3.0.0/att.extsym">att.extsym</a>
                     </div>
                     <div class="sortedInitials well f">
                        <h3>f</h3>
                        <a class="link_odd f" href="/documentation/3.0.0/att.f.anl">att.f.anl</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.f.ges">att.f.ges</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.f.log">att.f.log</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.f.vis">att.f.vis</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fTrem.anl">att.fTrem.anl</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fTrem.ges">att.fTrem.ges</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fTrem.log">att.fTrem.log</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fTrem.vis">att.fTrem.vis</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.facsimile">att.facsimile</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fermata.anl">att.fermata.anl</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fermata.ges">att.fermata.ges</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fermata.log">att.fermata.log</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fermata.vis">att.fermata.vis</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fermatapresent">att.fermatapresent</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.filing">att.filing</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fing.anl">att.fing.anl</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fing.ges">att.fing.ges</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fing.log">att.fing.log</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fing.vis">att.fing.vis</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fingGrp.anl">att.fingGrp.anl</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fingGrp.ges">att.fingGrp.ges</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fingGrp.log">att.fingGrp.log</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fingGrp.vis">att.fingGrp.vis</a>
                        <a class="link_odd f" href="/documentation/3.0.0/att.fretlocation">att.fretlocation</a>
                     </div>
                     <div class="sortedInitials well g">
                        <h3>g</h3>
                        <a class="link_odd g" href="/documentation/3.0.0/att.gliss.anl">att.gliss.anl</a>
                        <a class="link_odd g" href="/documentation/3.0.0/att.gliss.ges">att.gliss.ges</a>
                        <a class="link_odd g" href="/documentation/3.0.0/att.gliss.log">att.gliss.log</a>
                        <a class="link_odd g" href="/documentation/3.0.0/att.gliss.vis">att.gliss.vis</a>
                        <a class="link_odd g" href="/documentation/3.0.0/att.graced">att.graced</a>
                        <a class="link_odd g" href="/documentation/3.0.0/att.grpSym.anl">att.grpSym.anl</a>
                        <a class="link_odd g" href="/documentation/3.0.0/att.grpSym.ges">att.grpSym.ges</a>
                        <a class="link_odd g" href="/documentation/3.0.0/att.grpSym.log">att.grpSym.log</a>
                        <a class="link_odd g" href="/documentation/3.0.0/att.grpSym.vis">att.grpSym.vis</a>
                     </div>
                     <div class="sortedInitials well h">
                        <h3>h</h3>
                        <a class="link_odd h" href="/documentation/3.0.0/att.hairpin.anl">att.hairpin.anl</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.hairpin.ges">att.hairpin.ges</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.hairpin.log">att.hairpin.log</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.hairpin.vis">att.hairpin.vis</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.halfmRpt.anl">att.halfmRpt.anl</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.halfmRpt.ges">att.halfmRpt.ges</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.halfmRpt.log">att.halfmRpt.log</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.halfmRpt.vis">att.halfmRpt.vis</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.handident">att.handident</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.harm.anl">att.harm.anl</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.harm.ges">att.harm.ges</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.harm.log">att.harm.log</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.harm.vis">att.harm.vis</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.harmonicfunction">att.harmonicfunction</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.harpPedal.anl">att.harpPedal.anl</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.harpPedal.ges">att.harpPedal.ges</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.harpPedal.log">att.harpPedal.log</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.harpPedal.vis">att.harpPedal.vis</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.height">att.height</a>
                        <a class="link_odd h" href="/documentation/3.0.0/att.horizontalalign">att.horizontalalign</a>
                     </div>
                     <div class="sortedInitials well i">
                        <h3>i</h3>
                        <a class="link_odd i" href="/documentation/3.0.0/att.id">att.id</a>
                        <a class="link_odd i" href="/documentation/3.0.0/att.ineume.anl">att.ineume.anl</a>
                        <a class="link_odd i" href="/documentation/3.0.0/att.ineume.ges">att.ineume.ges</a>
                        <a class="link_odd i" href="/documentation/3.0.0/att.ineume.log">att.ineume.log</a>
                        <a class="link_odd i" href="/documentation/3.0.0/att.ineume.vis">att.ineume.vis</a>
                        <a class="link_odd i" href="/documentation/3.0.0/att.instrumentident">att.instrumentident</a>
                        <a class="link_odd i" href="/documentation/3.0.0/att.internetmedia">att.internetmedia</a>
                        <a class="link_odd i" href="/documentation/3.0.0/att.intervalharmonic">att.intervalharmonic</a>
                        <a class="link_odd i" href="/documentation/3.0.0/att.intervallicdesc">att.intervallicdesc</a>
                        <a class="link_odd i" href="/documentation/3.0.0/att.intervalmelodic">att.intervalmelodic</a>
                     </div>
                     <div class="sortedInitials well j">
                        <h3>j</h3>
                        <a class="link_odd j" href="/documentation/3.0.0/att.joined">att.joined</a>
                     </div>
                     <div class="sortedInitials well k">
                        <h3>k</h3>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keyAccid.anl">att.keyAccid.anl</a>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keyAccid.ges">att.keyAccid.ges</a>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keyAccid.log">att.keyAccid.log</a>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keyAccid.vis">att.keyAccid.vis</a>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keySig.anl">att.keySig.anl</a>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keySig.ges">att.keySig.ges</a>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keySig.log">att.keySig.log</a>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keySig.vis">att.keySig.vis</a>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keySigDefault.log">att.keySigDefault.log</a>
                        <a class="link_odd k" href="/documentation/3.0.0/att.keySigDefault.vis">att.keySigDefault.vis</a>
                     </div>
                     <div class="sortedInitials well l">
                        <h3>l</h3>
                        <a class="link_odd l" href="/documentation/3.0.0/att.labels.addl">att.labels.addl</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.lang">att.lang</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layer.anl">att.layer.anl</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layer.ges">att.layer.ges</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layer.log">att.layer.log</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layer.vis">att.layer.vis</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layerDef.anl">att.layerDef.anl</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layerDef.ges">att.layerDef.ges</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layerDef.log">att.layerDef.log</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layerDef.log.cmn">att.layerDef.log.cmn</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layerDef.vis">att.layerDef.vis</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.layerident">att.layerident</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.ligature.anl">att.ligature.anl</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.ligature.ges">att.ligature.ges</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.ligature.log">att.ligature.log</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.ligature.vis">att.ligature.vis</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.line.anl">att.line.anl</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.line.ges">att.line.ges</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.line.log">att.line.log</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.line.vis">att.line.vis</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.lineloc">att.lineloc</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.linerend">att.linerend</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.linerend.base">att.linerend.base</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.lvpresent">att.lvpresent</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.lyrics.anl">att.lyrics.anl</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.lyrics.ges">att.lyrics.ges</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.lyrics.log">att.lyrics.log</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.lyrics.vis">att.lyrics.vis</a>
                        <a class="link_odd l" href="/documentation/3.0.0/att.lyricstyle">att.lyricstyle</a>
                     </div>
                     <div class="sortedInitials well m">
                        <h3>m</h3>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRest.anl">att.mRest.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRest.ges">att.mRest.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRest.log">att.mRest.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRest.vis">att.mRest.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRpt.anl">att.mRpt.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRpt.ges">att.mRpt.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRpt.log">att.mRpt.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRpt.vis">att.mRpt.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRpt2.anl">att.mRpt2.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRpt2.ges">att.mRpt2.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRpt2.log">att.mRpt2.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mRpt2.vis">att.mRpt2.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mSpace.anl">att.mSpace.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mSpace.ges">att.mSpace.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mSpace.log">att.mSpace.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mSpace.vis">att.mSpace.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.measure.anl">att.measure.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.measure.ges">att.measure.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.measure.log">att.measure.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.measure.vis">att.measure.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.measurement">att.measurement</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.measurenumbers">att.measurenumbers</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mediabounds">att.mediabounds</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.medium">att.medium</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meiversion">att.meiversion</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.melodicfunction">att.melodicfunction</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mensur.anl">att.mensur.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mensur.ges">att.mensur.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mensur.log">att.mensur.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mensur.vis">att.mensur.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mensural.log">att.mensural.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mensural.shared">att.mensural.shared</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mensural.vis">att.mensural.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSig.anl">att.meterSig.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSig.ges">att.meterSig.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSig.log">att.meterSig.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSig.vis">att.meterSig.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSigDefault.log">att.meterSigDefault.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSigDefault.vis">att.meterSigDefault.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSigGrp.anl">att.meterSigGrp.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSigGrp.ges">att.meterSigGrp.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSigGrp.log">att.meterSigGrp.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterSigGrp.vis">att.meterSigGrp.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterconformance">att.meterconformance</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.meterconformance.bar">att.meterconformance.bar</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midi.anl">att.midi.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midi.event">att.midi.event</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midi.ges">att.midi.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midi.log">att.midi.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midi.vis">att.midi.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midiinstrument">att.midiinstrument</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midinumber">att.midinumber</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.miditempo">att.miditempo</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midivalue">att.midivalue</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midivalue2">att.midivalue2</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.midivelocity">att.midivelocity</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mmtempo">att.mmtempo</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mordent.anl">att.mordent.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mordent.ges">att.mordent.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mordent.log">att.mordent.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.mordent.vis">att.mordent.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.multiRest.anl">att.multiRest.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.multiRest.ges">att.multiRest.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.multiRest.log">att.multiRest.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.multiRest.vis">att.multiRest.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.multiRpt.anl">att.multiRpt.anl</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.multiRpt.ges">att.multiRpt.ges</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.multiRpt.log">att.multiRpt.log</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.multiRpt.vis">att.multiRpt.vis</a>
                        <a class="link_odd m" href="/documentation/3.0.0/att.multinummeasures">att.multinummeasures</a>
                     </div>
                     <div class="sortedInitials well n">
                        <h3>n</h3>
                        <a class="link_odd n" href="/documentation/3.0.0/att.name">att.name</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.notationstyle">att.notationstyle</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.notationtype">att.notationtype</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.anl">att.note.anl</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.ges">att.note.ges</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.ges.cmn">att.note.ges.cmn</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.ges.mensural">att.note.ges.mensural</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.ges.tablature">att.note.ges.tablature</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.log">att.note.log</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.log.cmn">att.note.log.cmn</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.log.mensural">att.note.log.mensural</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.vis">att.note.vis</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.note.vis.cmn">att.note.vis.cmn</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.noteheads">att.noteheads</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.numbered">att.numbered</a>
                        <a class="link_odd n" href="/documentation/3.0.0/att.numberplacement">att.numberplacement</a>
                     </div>
                     <div class="sortedInitials well o">
                        <h3>o</h3>
                        <a class="link_odd o" href="/documentation/3.0.0/att.octave">att.octave</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.octave.anl">att.octave.anl</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.octave.ges">att.octave.ges</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.octave.log">att.octave.log</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.octave.vis">att.octave.vis</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.octavedefault">att.octavedefault</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.octavedisplacement">att.octavedisplacement</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.onelinestaff">att.onelinestaff</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.optimization">att.optimization</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.origin.layerident">att.origin.layerident</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.origin.staffident">att.origin.staffident</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.origin.startendid">att.origin.startendid</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.origin.timestamp.musical">att.origin.timestamp.musical</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ornam">att.ornam</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ornam.anl">att.ornam.anl</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ornam.ges">att.ornam.ges</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ornam.log">att.ornam.log</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ornam.vis">att.ornam.vis</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ornamentaccid">att.ornamentaccid</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ossia.anl">att.ossia.anl</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ossia.ges">att.ossia.ges</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ossia.log">att.ossia.log</a>
                        <a class="link_odd o" href="/documentation/3.0.0/att.ossia.vis">att.ossia.vis</a>
                     </div>
                     <div class="sortedInitials well p">
                        <h3>p</h3>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pad.anl">att.pad.anl</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pad.ges">att.pad.ges</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pad.log">att.pad.log</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pad.vis">att.pad.vis</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pages">att.pages</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.part.anl">att.part.anl</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.part.ges">att.part.ges</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.part.log">att.part.log</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.part.vis">att.part.vis</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.parts.anl">att.parts.anl</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.parts.ges">att.parts.ges</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.parts.log">att.parts.log</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.parts.vis">att.parts.vis</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pb.anl">att.pb.anl</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pb.ges">att.pb.ges</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pb.log">att.pb.log</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pb.vis">att.pb.vis</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pedal.anl">att.pedal.anl</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pedal.ges">att.pedal.ges</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pedal.log">att.pedal.log</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pedal.vis">att.pedal.vis</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.phrase.anl">att.phrase.anl</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.phrase.ges">att.phrase.ges</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.phrase.log">att.phrase.log</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.phrase.vis">att.phrase.vis</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.phrase.vis.cmn">att.phrase.vis.cmn</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pianopedals">att.pianopedals</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pitch">att.pitch</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pitchclass">att.pitchclass</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pitched">att.pitched</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.placement">att.placement</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.plist">att.plist</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.pointing">att.pointing</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.proport.anl">att.proport.anl</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.proport.ges">att.proport.ges</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.proport.log">att.proport.log</a>
                        <a class="link_odd p" href="/documentation/3.0.0/att.proport.vis">att.proport.vis</a>
                     </div>
                     <div class="sortedInitials well q">
                        <h3>q</h3>
                        <a class="link_odd q" href="/documentation/3.0.0/att.quantity">att.quantity</a>
                     </div>
                     <div class="sortedInitials well r">
                        <h3>r</h3>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rdg.anl">att.rdg.anl</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rdg.ges">att.rdg.ges</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rdg.log">att.rdg.log</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rdg.vis">att.rdg.vis</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.reasonident">att.reasonident</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.regularized">att.regularized</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.regularmethod">att.regularmethod</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.reh.anl">att.reh.anl</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.reh.ges">att.reh.ges</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.reh.log">att.reh.log</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.reh.vis">att.reh.vis</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rehearsal">att.rehearsal</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rel">att.rel</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.relativesize">att.relativesize</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.responsibility">att.responsibility</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rest.anl">att.rest.anl</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rest.ges">att.rest.ges</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rest.ges.mensural">att.rest.ges.mensural</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rest.log">att.rest.log</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rest.log.cmn">att.rest.log.cmn</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rest.vis">att.rest.vis</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rest.vis.cmn">att.rest.vis.cmn</a>
                        <a class="link_odd r" href="/documentation/3.0.0/att.rest.vis.mensural">att.rest.vis.mensural</a>
                     </div>
                     <div class="sortedInitials well s">
                        <h3>s</h3>
                        <a class="link_odd s" href="/documentation/3.0.0/att.sb.anl">att.sb.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.sb.ges">att.sb.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.sb.log">att.sb.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.sb.vis">att.sb.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.scalable">att.scalable</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.score.anl">att.score.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.score.ges">att.score.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.score.log">att.score.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.score.vis">att.score.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.scoreDef.anl">att.scoreDef.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.scoreDef.ges">att.scoreDef.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.scoreDef.log">att.scoreDef.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.scoreDef.log.cmn">att.scoreDef.log.cmn</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.scoreDef.log.mensural">att.scoreDef.log.mensural</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.scoreDef.vis">att.scoreDef.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.scoreDef.vis.cmn">att.scoreDef.vis.cmn</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.scoreDef.vis.mensural">att.scoreDef.vis.mensural</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.section.anl">att.section.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.section.ges">att.section.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.section.log">att.section.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.section.vis">att.section.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.sequence">att.sequence</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.slashcount">att.slashcount</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.slur.anl">att.slur.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.slur.ges">att.slur.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.slur.log">att.slur.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.slur.vis">att.slur.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.slurpresent">att.slurpresent</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.slurrend">att.slurrend</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.solfa">att.solfa</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.source">att.source</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.space.anl">att.space.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.space.ges">att.space.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.space.log">att.space.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.space.log.cmn">att.space.log.cmn</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.space.vis">att.space.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.spacing">att.spacing</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staff.anl">att.staff.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staff.ges">att.staff.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staff.log">att.staff.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staff.vis">att.staff.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffDef.anl">att.staffDef.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffDef.ges">att.staffDef.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffDef.ges.tablature">att.staffDef.ges.tablature</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffDef.log">att.staffDef.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffDef.log.cmn">att.staffDef.log.cmn</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffDef.log.mensural">att.staffDef.log.mensural</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffDef.vis">att.staffDef.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffDef.vis.cmn">att.staffDef.vis.cmn</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffDef.vis.mensural">att.staffDef.vis.mensural</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffGrp.anl">att.staffGrp.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffGrp.ges">att.staffGrp.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffGrp.log">att.staffGrp.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffGrp.vis">att.staffGrp.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffgroupingsym">att.staffgroupingsym</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffident">att.staffident</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffloc">att.staffloc</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.staffloc.pitched">att.staffloc.pitched</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.startendid">att.startendid</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.startid">att.startid</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.stems">att.stems</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.stems.cmn">att.stems.cmn</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.syl.anl">att.syl.anl</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.syl.ges">att.syl.ges</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.syl.log">att.syl.log</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.syl.vis">att.syl.vis</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.syltext">att.syltext</a>
                        <a class="link_odd s" href="/documentation/3.0.0/att.systems">att.systems</a>
                     </div>
                     <div class="sortedInitials well t">
                        <h3>t</h3>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tabular">att.tabular</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.targeteval">att.targeteval</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tempo.anl">att.tempo.anl</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tempo.ges">att.tempo.ges</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tempo.log">att.tempo.log</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tempo.vis">att.tempo.vis</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.textstyle">att.textstyle</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tie.anl">att.tie.anl</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tie.ges">att.tie.ges</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tie.log">att.tie.log</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tie.vis">att.tie.vis</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tiepresent">att.tiepresent</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tierend">att.tierend</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.timebase">att.timebase</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.timestamp.musical">att.timestamp.musical</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.timestamp.performed">att.timestamp.performed</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.timestamp2.musical">att.timestamp2.musical</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.trans">att.trans</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.transposition">att.transposition</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tremmeasured">att.tremmeasured</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.trill.anl">att.trill.anl</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.trill.ges">att.trill.ges</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.trill.log">att.trill.log</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.trill.vis">att.trill.vis</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tuplet.anl">att.tuplet.anl</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tuplet.ges">att.tuplet.ges</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tuplet.log">att.tuplet.log</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tuplet.vis">att.tuplet.vis</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tupletSpan.anl">att.tupletSpan.anl</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tupletSpan.ges">att.tupletSpan.ges</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tupletSpan.log">att.tupletSpan.log</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tupletSpan.vis">att.tupletSpan.vis</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.tupletpresent">att.tupletpresent</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.turn.anl">att.turn.anl</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.turn.ges">att.turn.ges</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.turn.log">att.turn.log</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.turn.vis">att.turn.vis</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.typed">att.typed</a>
                        <a class="link_odd t" href="/documentation/3.0.0/att.typography">att.typography</a>
                     </div>
                     <div class="sortedInitials well u">
                        <h3>u</h3>
                        <a class="link_odd u" href="/documentation/3.0.0/att.uneume.anl">att.uneume.anl</a>
                        <a class="link_odd u" href="/documentation/3.0.0/att.uneume.ges">att.uneume.ges</a>
                        <a class="link_odd u" href="/documentation/3.0.0/att.uneume.log">att.uneume.log</a>
                        <a class="link_odd u" href="/documentation/3.0.0/att.uneume.vis">att.uneume.vis</a>
                     </div>
                     <div class="sortedInitials well v">
                        <h3>v</h3>
                        <a class="link_odd v" href="/documentation/3.0.0/att.verse.anl">att.verse.anl</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.verse.ges">att.verse.ges</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.verse.log">att.verse.log</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.verse.vis">att.verse.vis</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.visibility">att.visibility</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.visualoffset">att.visualoffset</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.visualoffset.ho">att.visualoffset.ho</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.visualoffset.to">att.visualoffset.to</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.visualoffset.vo">att.visualoffset.vo</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.visualoffset2">att.visualoffset2</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.visualoffset2.ho">att.visualoffset2.ho</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.visualoffset2.to">att.visualoffset2.to</a>
                        <a class="link_odd v" href="/documentation/3.0.0/att.visualoffset2.vo">att.visualoffset2.vo</a>
                     </div>
                     <div class="sortedInitials well w">
                        <h3>w</h3>
                        <a class="link_odd w" href="/documentation/3.0.0/att.whitespace">att.whitespace</a>
                        <a class="link_odd w" href="/documentation/3.0.0/att.width">att.width</a>
                     </div>
                     <div class="sortedInitials well x">
                        <h3>x</h3>
                        <a class="link_odd x" href="/documentation/3.0.0/att.xy">att.xy</a>
                        <a class="link_odd x" href="/documentation/3.0.0/att.xy2">att.xy2</a>
                     </div>
                  </div>
               </div>
            </div>
            <div class="panel-grid-cell" style="width: 35%; float: left;">
               <div class="panel widget widget_text panel-first-child panel-last-child">
                  <header class="entry-header">
                     <h1 class="entry-title">
                        MEI Guidelines 
                        <small>Version 3.0.0</small>
                     </h1>
                  </header>
                  <div class="textwidget">
                     <ul class="guidelinesList">
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/chapters">MEI Guidelines</a>
                        </li>
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/elements">Elements</a>
                        </li>
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/atts">Attributes</a>
                        </li>
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/models">Model Classes</a>
                        </li>
                        <li>
                           <a class="guidelines_mainLink" href="/documentation/3.0.0/data">Data Types</a>
                        </li>
                     </ul>
                  </div>
               </div>
            </div>
         </div>
      </div>
   </article>
</div>